# nubankx

./: .gitignore  AGENT_INSTRUCTIONS_PAYMENT_V2.md  MCP_SHARED_STORAGE_FIX.md  PAYMENT_AGENT_V2_QUICKSTART.md  PERSISTENT_STORAGE_FIX_DOCUMENTATION.md  README.md  account-mcp-config-updated.yaml  account-mcp-config.yaml  account-mcp-template.json  account-mcp-updated.yaml  accounts-current.json  configure-mcp-volumes.ps1  contacts-mcp-template.json  contacts-mcp-updated.json  contacts-mcp-updated.yaml  contacts-template.yaml  escalation-mcp-template.json  escalation-mcp-updated.yaml  escalation-template.yaml  fix-mcp-shared-storage.ps1  limits-mcp-config-updated.yaml  limits-mcp-config.yaml  limits-mcp-template.json  limits-mcp-updated.json  limits-mcp-updated.yaml  limits-template.yaml  payment-mcp-complete.yaml  payment-mcp-template-updated.json  payment-mcp-template.json  payment-mcp-update.yaml  test-volumes.ps1  transaction-template.json  transaction-updated.yaml  update-payment-mcp-volumes.json  verify-mcp-shared-storage.ps1
claude_bank/: .dockerignore  .env.bankx-auth  .env.example  .gitignore  README.md  accounts.json  agent_applications_response.json  agent_identities.json  azure.yaml  azure_deployment_verification.py  clear_agent_cache.py  commands.md  docker-compose-production.yml  docker-compose.backend.yml  docker-compose.yml  find_agent_identity_mapping.py  get_agent_identity_ids.py  get_agent_identity_ids_async.py  get_agent_identity_via_api.py  get_published_agent_identities.py  list_all_agents.py  list_vector_stores.py  log.txt  main.py  map_agents_to_identities.py  newdoc.md  pyproject.toml  questions_uc2_uc3.md  requirements.txt  temp-roles.json  validate_agent_handlers.py
claude_bank/app/agents/account-agent-a2a/: .env.example  QUICK_START.md  README.md  __init__.py  agent_handler.py  audited_mcp_tool.py  config.py  create_account_agent_in_foundry.py  create_agent_in_foundry.py  get_agent_id.py  inspect_agent.py  main.py  pyproject.toml  requirements.txt  test_a2a_connection.py  test_a2a_integration.py  test_end_to_end.py  verify_agent.py
claude_bank/app/agents/account-agent-a2a/prompts/: account_agent.md
claude_bank/app/agents/payment-agent-v3-a2a/: .env.example  __init__.py  agent_handler.py  config.py  create_agent_in_foundry.py  main.py  pyproject.toml
claude_bank/app/agents/payment-agent-v3-a2a/prompts/: payment_agent.md
claude_bank/app/agents/transaction-agent-a2a/: .env.example  agent_handler.py  audited_mcp_tool.py  config.py  create_agent_in_foundry.py  create_transaction_agent_in_foundry.py  main.py  pyproject.toml  test_a2a_connection.py  test_mcp_tools.py
claude_bank/app/agents/transaction-agent-a2a/prompts/: transaction_agent.md
claude_bank/app/business-api/python/ai_money_coach/: .env.example  Dockerfile  README.md  __init__.py  logging_config.py  main.py  mcp_tools.py  models.py  pyproject.toml  services.py
claude_bank/app/business-api/python/escalation_comms/: .env.example  Dockerfile  README.md  __init__.py  main.py  mcp_tools.py  models.py  pyproject.toml  services.py  test_email.py  ticket_service.py
claude_bank/app/business-api/python/escalation_comms/data/: tickets.json
claude_bank/app/business-api/python/payment-unified/: .env.example  Dockerfile  README.md  __init__.py  logging_config.py  main.py  mcp_tools.py  models.py  pyproject.toml  requirements.txt  services.py  start_mcp_server.ps1
claude_bank/app/copilot/: .dockerignore  .env.dev.example  Dockerfile  cosmos_status_check.py  create_ai_money_coach_agent.py  get_portal_agent_details.py  list_agent_ids.py  pyproject.toml  readiness_check.py  routing_diagnostics.py  test_agent_get_methods.py  test_agents_client_direct.py  test_azureaiclient_vs_azureaiagentclient.py  test_new_agent_format.py  test_openai_client.py
claude_bank/app/copilot/app/: conversation_state_manager.py  logging-default.yaml  main.py
claude_bank/app/copilot/app/agents/azure_chat/: account_agent.py  ai_money_coach_agent.py  escalation_comms_agent.py  payment_agent.py  prodinfo_faq_agent.py  supervisor_agent.py  supervisor_agent_a2a.py  transaction_agent.py
claude_bank/app/copilot/app/agents/foundry/: account_agent_foundry.py  ai_money_coach_agent_foundry.py  ai_money_coach_agent_knowledge_base_foundry.py  escalation_comms_agent_foundry.py  payment_agent_foundry.py  prodinfo_faq_agent_foundry.py  prodinfo_faq_agent_knowledge_base_foundry.py  supervisor_agent_a2a.py  supervisor_agent_foundry.py  transaction_agent_foundry.py
claude_bank/app/copilot/app/api/: agent_cards_routers.py  auth_routers.py  chat_routers.py  content_routers.py  conversations.py  dashboard_routers.py  dependencies.py  mcp_routers.py
claude_bank/app/copilot/app/auth/: token_validator.py  user_mapper.py
claude_bank/app/copilot/app/cache/: __init__.py  mcp_client.py  user_cache.py
claude_bank/app/copilot/app/config/: azure_credential.py  container_azure_chat.py  container_foundry.py  settings.py
claude_bank/app/copilot/app/models/: chat.py  financial_schemas.py  user_context.py
claude_bank/app/copilot/app/observability/: banking_telemetry.py
claude_bank/app/copilot/app/purview/: __init__.py  config.py  lineage_tracker.py  models.py  purview_service.py
claude_bank/app/copilot/app/tools/: audited_mcp_tool.py
claude_bank/app/copilot/app/utils/: agent_activity_tracker.py  conversation_logger.py  date_normalizer.py  mcp_data_fetcher.py  session_memory.py
claude_bank/conversations/: conversation_manager.py
claude_bank/data/: Usecase3_MoneyCoach_Debt-Free to Financial Freedom_EN_V2.docx  current-account-en.docx  normal-fixed-account-en.docx  normal-savings-account-en.docx  td-bonus-24months-en.docx  td-bonus-36months-en.docx  ~$ecase3_MoneyCoach_Debt-Free to Financial Freedom_EN_V2.docx  ~$rmal-savings-account-en.docx
claude_bank/docs/: A2A_IMPLEMENTATION_PLAN.md  A2A_IMPLEMENTATION_PROGRESS.md  A2A_IMPLEMENTATION_SUMMARY.md  A2A_MISSING_AGENTS_UPDATE.md  A2A_PHASE2_EXECUTION_PLAN.md  COPILOT_STUDIO_DIRECT_CONNECTORS_GUIDE.md  DEPLOYMENT_RUNBOOK.md  ENTRAID_SETUP_GUIDE.md  ESCALATION_AGENT_HTTP_APPROACH.md  (+17 more)
(+407 files in other folders)
