[project]
name = "transaction-agent-a2a"
version = "1.0.0"
description = "TransactionAgent A2A Microservice for BankX"
requires-python = ">=3.11"

dependencies = [
    # Agent Framework (PyPI packages)
    "agent-framework-core==1.0.0b251223",
    "agent-framework-azure-ai==1.0.0b251223",
    "agent-framework-a2a==1.0.0b251223",
    
    # Azure AI Foundry V2 SDK
    "azure-ai-projects>=2.0.0b2",
    "azure-ai-agents==1.2.0b5",
    
    # A2A SDK
    "a2a-sdk>=0.3.5",
    
    # Azure Identity
    "azure-identity>=1,<2",
    
    # Pydantic
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    
    # OpenAI SDK
    "openai>=1.99.0",
    
    # FastAPI & Uvicorn
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    
    # MCP Support
    "mcp>=1.3.1",
    
    # HTTP Client
    "httpx>=0.28.0",
    
    # Environment Variables
    "python-dotenv>=1.0.1",
    
    # Aiohttp
    "aiohttp>=3.11.0",

    # Observability
    "azure-monitor-opentelemetry>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
