[project]
name = "banking-assistant-ai-money-coach-mcp"
version = "0.1.0"
description = "Python MCP server for AI Money Coach with AI Search and Content Understanding"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0",
    "azure-search-documents>=11.4.0",
    "azure-identity>=1.24.0",
    "azure-ai-inference>=1.0.0b9",
    "azure-ai-evaluation>=1.0.0",
    "httpx>=0.28.0,<1.0",
    "python-dotenv>=1.0.0",
    "azure-monitor-opentelemetry>=1.8.0",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-sdk>=1.38.0"
]
