[project]
name = "banking-assistant-escalation-comms-mcp"
version = "0.1.0"
description = "Python MCP server for Escalation Communications via Azure Communication Services"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0",
    "azure-communication-email>=1.0.0",
    "azure-identity>=1.24.0",
    "httpx>=0.27.0,<1.0"
]
