[project]
name = "banking-assistant-payment-unified-mcp"
version = "0.1.0"
description = "Unified Payment MCP Server - Consolidates account, beneficiary, limits, and transfer operations"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "fastmcp>=0.1.0",
    "pydantic>=2.5.0",
    "filelock>=3.13.0",
    "python-dotenv>=1.0.0",
]
